--- a/dashboard.html
+++ b/dashboard.html
@@ -219,20 +219,67 @@
                             </div>
                             <div class=" mt-3 px-3">
                                 <div class="row justify-content-between">
-                                    <div class="col-9 col-lg-6">
-                                        <span class="post-likes c-blue f-14 mr-3 f-bold">
-                                            <i class="far fa-heart mr-2 f-16"></i>
+                                    <div class="col-9 col-lg-9 pl-0">
+                                        <button class="post-likes btn btn-sm no-bs c-blue f-14 f-bold">
+                                            <i class="far fa-heart f-16"></i>
                                             20 likes
-                                        </span>
-                                        <span class="post-comment c-blue f-14 f-bold">
+                                        </button>
+                                        <button class="view-comment btn btn-sm no-bs c-blue f-14 f-bold">
                                             <i class="far fa-comment mr-2 f-16"></i>
                                             12 comments
-                                        </span>
+                                        </button>
                                     </div>
                                     <div class="col-3 col-lg-3 text-right px-0">
                                         <i class="far fa-bookmark c-blue"></i>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="comments hide mt-5">
+                                <div class="partial-comments" id="partial_comments">
+                                    <div class="media">
+                                        <img class="d-flex mr-3" src="assets/images/user_3.png" alt="Generic placeholder image">
+                                        <div class="media-body f-12">
+                                            <h5 class="mt-0 font-weight-bold f-13">Adekunle Ayo</h5>
+                                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
+                                            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
+                                            congue felis in faucibus.
+                                        
+                                            <div class="media mt-4">
+                                                <a class="d-flex pr-3" href="#">
+                                                    <img src="assets/images/user_3.png" alt="Generic placeholder image">
+                                                </a>
+                                                <div class="media-body f-12">
+                                                    <h5 class="mt-0 font-weight-bold f-13">Tobi Smith</h5>
+                                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
+                                                    vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
+                                                    congue felis in faucibus.
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="media mt-4">
+                                        <img class="d-flex mr-3" src="assets/images/user_3.png" alt="Generic placeholder image">
+                                        <div class="media-body f-12">
+                                            <h5 class="mt-0 font-weight-bold f-13">Adekunle Ayo</h5>
+                                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
+                                            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
+                                            congue felis in faucibus.
+                                        
+                                            <div class="media mt-4">
+                                                <a class="d-flex pr-3" href="#">
+                                                    <img src="assets/images/user_3.png" alt="Generic placeholder image">
+                                                </a>
+                                                <div class="media-body f-12">
+                                                    <h5 class="mt-0 font-weight-bold f-13">Tobi Smith</h5>
+                                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
+                                                    vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
+                                                    congue felis in faucibus.
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                              <div class="text-center"><button class="btn btn-md btn-brand text-white mt-5 font-weight-bold hide" id="show_more">show more</button></div>
                             </div>
                             <div class="comment-box mt-4">
                                 <div class="row">
@@ -520,5 +567,9 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.9/js/mdb.min.js"></script>
+        <script src="assets/js/main.js" charset="utf-8"></script>
+        <script>
+          app.initShowComments();
+        </script>
     </body>
 </html>
