--- a/branch.html
+++ b/branch.html
@@ -68,11 +68,11 @@
                         </a>
 
                         <div class="dropdown-menu">
-                          <a class="dropdown-item" href="#">Action</a>
+                          <a class="dropdown-item" href="user_profile.html">Profile</a>
                           <a class="dropdown-item" href="#">Another action</a>
                           <a class="dropdown-item" href="#">Something else here</a>
                           <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="#">Separated link</a>
+                          <a class="dropdown-item" href="login.html">Logout </a>
                         </div>
                         <!-- Basic dropdown -->
                       </li>
