--- a/dashboard.html
+++ b/dashboard.html
@@ -15,6 +15,7 @@
         <!-- Material Design Bootstrap -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.9/css/mdb.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="assets/plugins/css/lightbox.min.css">
         <link rel="stylesheet" href="./assets/css/main.css">
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
@@ -217,7 +218,29 @@
                                     Frontier for growth in the development of local expertise in the subsea of oil
                                     and gas industry and that Brisktrode will play a key role in driving this agenda.
                                 </p>
-                                <img src="assets/images/post_1.png" class="w-100" alt='user post' />
+                                <div class="attached-img">
+                                  <a href="assets/images/post_4.jpg" class="lightbox-img p-2" data-lightbox="posts" data-title="My post image">
+                                    <img src="assets/images/post_4.jpg" class="w-100" alt='user post' />
+                                  </a>
+                                  <a href="assets/images/post_5.jpg" class="lightbox-img p-2" data-lightbox="posts" data-title="My post image">
+                                    <img src="assets/images/post_5.jpg" class="w-100" alt='user post' />
+                                  </a>
+                                  <a href="assets/images/post_2.jpg" class="lightbox-img p-2" data-lightbox="posts" data-title="My post image">
+                                    <img src="assets/images/post_2.jpg" class="w-100" alt='user post' />
+                                  </a>
+                                  <a href="assets/images/post_3.jpg" class="lightbox-img p-2" data-lightbox="posts" data-title="My post image">
+                                    <img src="assets/images/post_3.jpg" class="w-100" alt='user post' />
+                                  </a>
+                                  <a href="assets/images/post_2.jpg" class="lightbox-img p-2" data-lightbox="posts" data-title="My post image">
+                                    <img src="assets/images/post_2.jpg" class="w-100" alt='user post' />
+                                  </a>
+                                  <a href="assets/images/post_5.jpg" class="lightbox-img p-2" data-lightbox="posts" data-title="My post image">
+                                    <img src="assets/images/post_5.jpg" class="w-100" alt='user post' />
+                                  </a>
+                                  <div class="dark-overlay" id="post_overlay">
+                                    <h2 class="white-text f-bold text-center mt-5 f-52">+ <span class="post-img-length" id="post_image_count"></span></h2>
+                                  </div>
+                                </div>
                             </div>
                             <div class=" mt-3 px-3">
                                 <div class="row justify-content-between">
@@ -571,8 +594,10 @@
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.9/js/mdb.min.js"></script>
         <script src="assets/js/main.js" charset="utf-8"></script>
+        <script src="assets/plugins/js/lightbox.min.js"></script>
         <script>
           app.initShowComments();
+          app.initImageThumbnail();
         </script>
     </body>
 </html>
